--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -6,5 +6,7 @@
 #
 emoji==2.14.1
     # via -r requirements.in
+typing-extensions==4.14.1
+    # via -r requirements.in
 wcwidth==0.2.13
     # via -r requirements.in
